Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-319

RuntimeProfile.thrift doesn't have event sequence information

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 1.0
    • Impala 1.0.1
    • None
    • None

    Description

      Info on the "Query Timeline" shows up in the query profile page in the web UI, but isn't in the thrift object. It would be useful to have it in the thrift object too.

      Attachments

        Activity

          People

            henryr Henry Robinson
            kvigen_impala_0920 Kyle Vigen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: