IMPALA-319: Add EventSequence to Thrift